<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >

        <android.support.design.card.MaterialCardView android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:layout_marginTop="10dp">
            <LinearLayout android:layout_width="match_parent"
                          android:padding="10dp"
                          android:layout_height="match_parent" android:orientation="vertical">
                <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:id="@+id/et_timer_seconds"
                                                                 android:inputType="number"
                                                                 android:hint="@string/total_seconds_for_timer"/>

                <android.support.design.button.MaterialButton android:layout_width="wrap_content"
                                                              android:layout_height="wrap_content"
                                                              android:text="@string/create_a_timer"
                                                              app:icon="@drawable/ic_timer_black_24dp"
                                                              android:layout_gravity="center"
                                                              android:onClick="startTimer"/>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:layout_marginTop="10dp">
            <LinearLayout android:layout_width="match_parent"
                          android:padding="10dp"
                          android:layout_height="match_parent" android:orientation="vertical">
                <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:id="@+id/et_web_search"
                                                                 android:hint="@string/search_on_web"/>

                <android.support.design.button.MaterialButton android:layout_width="wrap_content"
                                                              android:layout_height="wrap_content"
                                                              android:text="@string/search_on_web"
                                                              app:icon="@android:drawable/ic_menu_search"
                                                              android:layout_gravity="center"
                                                              android:onClick="performWebSearch"/>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.button.MaterialButton android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/add_event_on_calendar"
                                                      android:layout_gravity="center"
                                                      android:onClick="setCalendar"
                                                      app:icon="@android:drawable/ic_menu_my_calendar"
                                                      android:layout_marginTop="10dp"/>

        <android.support.design.card.MaterialCardView android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:layout_marginTop="10dp">
            <LinearLayout android:layout_width="match_parent"
                          android:padding="10dp"
                          android:layout_height="match_parent" android:orientation="vertical">

                <android.support.design.button.MaterialButton android:layout_width="wrap_content"
                                                              android:layout_height="wrap_content"
                                                              android:text="@string/select_a_contact"
                                                              android:layout_gravity="center"
                                                              android:onClick="selectContact"
                                                              android:layout_marginTop="10dp"
                                                              app:icon="@drawable/ic_baseline_contacts_24px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tv_contact_detail"/>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:layout_marginTop="10dp">
            <LinearLayout android:layout_width="match_parent"
                          android:padding="10dp"
                          android:layout_height="match_parent" android:orientation="vertical"
                          android:layout_marginTop="10dp">

                <android.support.design.button.MaterialButton android:layout_width="wrap_content"
                                                              android:layout_height="match_parent"
                                                              android:text="@string/capture_video"
                                                              app:icon="@android:drawable/presence_video_online"
                                                              android:layout_gravity="center"
                                                              android:onClick="dispatchTakeVideoIntent"/>
                <VideoView android:layout_width="match_parent" android:layout_height="300dp"
                           android:id="@+id/videoView" android:visibility="gone"/>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

    </LinearLayout>
</ScrollView>